# Ferrum-OS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.ps1  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
appliance/models/: README.md
compat/: assert.h  stdlib.h  string.h
docs/: ARCHITECTURE.md  HELIOX_INTEGRATION.md  ROADMAP.md
scripts/: audit_all_commands.mjs  collect_world_model_dataset.mjs  command_sweep.mjs  convert_model_v2.py  generate_mock_model.mjs  make-appliance.ps1  train_world_model.py  train_world_model_encoder.py  verify_accounts.mjs  verify_app_window.mjs  verify_appliance.mjs  verify_assistant_panel.mjs  verify_audio_nonblocking.mjs  verify_bridge.mjs  verify_camera.mjs  verify_core_apps.mjs  verify_current_pid.mjs  verify_daemon.mjs  verify_dashboard_scheduling.mjs  verify_desktop_scheduling.mjs  verify_desktop_shell.mjs  verify_fusion.mjs  verify_heliox_setup.mjs  verify_hud.mjs  verify_inference.mjs  verify_jsonrpc_methods.mjs  verify_kernel_grade_autonomy_safety.mjs  verify_keyboard_input_integrity.mjs  verify_mmap.mjs  verify_net.mjs  verify_new_apps.mjs  verify_offline_inference_self_evolution.mjs  verify_pkg_manager.mjs  verify_pkg_remove_run.mjs  verify_real_model.mjs  verify_ring3.mjs  verify_scheduler_stubs.mjs  verify_shell_coexistence.mjs  verify_tcp_server.mjs  verify_tier.mjs  (+6 more)
src/: gdt.rs  hardware.rs  lib.rs  main.rs  serial.rs
src/accounts/: mod.rs
src/acpi/: mod.rs
src/agent/: mod.rs
src/ata/: mod.rs
src/audio/: mod.rs
src/devices/: camera_synth.rs  hda.rs  mod.rs  pci.rs  ps2_mouse.rs  usb_hid.rs  vga_fb.rs  virtio_gpu.rs  xhci.rs
src/elf/: mod.rs
src/fs/: block.rs  ext2.rs  mod.rs  vfs.rs
src/graphics/: console.rs  font.rs  mod.rs
src/gui/: app_window.rs  compositor.rs  cursor.rs  desktop.rs  mod.rs  window.rs
src/heliox/: mod.rs
src/input/: mod.rs
src/interrupts/: mod.rs
src/ipc/: mod.rs
src/logging/: audit.rs  mod.rs
src/memory/: heap.rs  mod.rs
src/net/: iface.rs  mod.rs  rtl8139.rs  stack.rs
src/pkg/: mod.rs
src/process/: mod.rs  supervisor.rs
src/scheduler/: mod.rs
src/security/: mod.rs  rand.rs  time.rs
src/services/: mod.rs
src/shell/: commands.rs  dashboard.rs  mod.rs
src/smp/: mod.rs  per_cpu.rs  trampoline.s
src/sync/: mod.rs
src/syscall/: audio.rs  camera.rs  fs.rs  graphics.rs  gui_window.rs  hud.rs  input.rs  kexec.rs  mmap.rs  mod.rs  process.rs  query.rs  socket.rs
src/userspace/: mod.rs
src/vga/: mod.rs
userland/app-store/: Cargo.toml
userland/app-store/.cargo/: config.toml
userland/app-store/src/: main.rs
userland/browser/: Cargo.toml
userland/browser/.cargo/: config.toml
userland/browser/src/: main.rs
userland/calculator/: Cargo.toml
userland/calculator/.cargo/: config.toml
userland/calculator/src/: main.rs
userland/file-manager/: Cargo.toml
userland/file-manager/.cargo/: config.toml
userland/file-manager/src/: main.rs
userland/gui-smoke-test/: Cargo.toml
userland/gui-smoke-test/.cargo/: config.toml
userland/gui-smoke-test/src/: main.rs
userland/heliox-assistant-panel/: Cargo.toml
userland/heliox-assistant-panel/.cargo/: config.toml
userland/heliox-assistant-panel/src/: main.rs
userland/heliox-bridge/: Cargo.toml  build.ps1
userland/heliox-bridge/src/: main.rs
userland/heliox-daemon/: Cargo.toml
userland/heliox-daemon/.cargo/: config.toml
userland/heliox-daemon/certs/: test_ca.der  test_ca.key  test_ca.pem  test_ca.srl  test_server.csr  test_server.ext  test_server.key  test_server.pem
userland/heliox-daemon/src/: config.rs  main.rs  network.rs
userland/heliox-daemon/src/cognitive/: confirmation.rs  fusion.rs  gesture.rs  inference.rs  json.rs  mod.rs  multi_agent.rs  orchestrator.rs  planner.rs  reflector.rs  screen_vision.rs  self_evolve.rs  tool_mapper.rs  verifier.rs  voice.rs  web_agent.rs
userland/heliox-daemon/src/cognitive/world_model/: encoder.rs  encoder_learned.rs  experience.rs  learned.rs  mod.rs  observation.rs  safety.rs  transition.rs
userland/heliox-daemon/src/memory/: vector_store.rs
userland/init/: Cargo.toml
userland/init/.cargo/: config.toml
userland/init/src/: main.rs
userland/libferrumgui/: Cargo.toml
userland/libferrumgui/src/: font.rs  lib.rs
userland/notes/: Cargo.toml
userland/notes/.cargo/: config.toml
userland/notes/src/: main.rs
userland/settings/: Cargo.toml
userland/settings/.cargo/: config.toml
userland/settings/src/: main.rs
userland/text-editor/: Cargo.toml
userland/text-editor/.cargo/: config.toml
userland/text-editor/src/: main.rs
