# ============================================================================
# FerrumOS - A Rust-based AI-Native Autonomous Operating System
# ============================================================================
# Version: 0.1.0
# Architecture: x86_64 bare-metal
# Philosophy: Security-first, modular, AI-runtime-ready
# ============================================================================

[package]
name = "ferrumos"
version = "0.1.0"
edition = "2021"
authors = ["FerrumOS Contributors"]
description = "A minimal modular Rust-based operating system designed as the foundation for an AI-native autonomous computing environment"
license = "MIT"

[lib]
test = false

[features]
default = []
# Emits a `[RESUME_TASK]` serial trace line on every scheduler context
# switch (src/scheduler/mod.rs). Off by default: printing to the (slow,
# polled) serial port happens with interrupts disabled, and on every
# single context switch that's frequent enough - one background ring-3
# app polling every 30ms is enough - to routinely delay the PS/2 keyboard
# IRQ past the point where a second scancode overwrites the controller's
# single-byte buffer before the first is read, corrupting or dropping
# keystrokes typed at the shell while anything is running in the
# background. Needed only by scripts/verify_dashboard_scheduling.mjs and
# scripts/verify_shell_coexistence.mjs, which assert on scheduling
# fairness by counting these lines - build with
# `cargo build --features sched-trace` before running either.
sched-trace = []

# ==== Dependencies ====
# All dependencies are no_std compatible for bare-metal execution

[dependencies]
# Boot and hardware abstraction
bootloader = { version = "=0.9.33", features = ["map_physical_memory"] }

# x86_64 architecture support (GDT, IDT, paging, port I/O)
x86_64 = "0.15.2"

# Serial port output (UART 16550) for QEMU debugging
uart_16550 = "0.2.19"

# Programmable Interrupt Controller
pic8259 = "0.11.0"

# Spinlock-based synchronization (no_std)
spin = "0.9.8"

# Kernel heap allocator
linked_list_allocator = "0.10.5"

# Lazy initialization
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

# Networking stack
smoltcp = { version = "0.11.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp"] }

# ACPI and APIC (Phase 5)
acpi = "4.1.1"
aml = "0.16.4"
x2apic = "0.4.3"

# ==== Profile Configuration ====

[profile.dev]
panic = "abort"         # No unwinding in kernel
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
lto = true              # Link-time optimization for smaller binary

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
