[package]
name = "ferrumos-browser"
version = "0.0.1"
edition = "2021"
authors = ["FerrumOS Contributors"]
description = "Minimal HTTP text browser: fetches a page over a raw TCP socket and displays the response body"
license = "MIT"

[dependencies]
linked_list_allocator = "0.10.5"
ferrumgui = { path = "../libferrumgui" }

[[bin]]
name = "browser"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
