[package]
name = "ferrumos-heliox-assistant-panel"
version = "0.0.1"
edition = "2021"
authors = ["FerrumOS Contributors"]
description = "Real app-window-based chat UI for the Heliox agent, replacing the kernel-hardcoded AgentHud window"
license = "MIT"

[dependencies]
linked_list_allocator = "0.10.5"
ferrumgui = { path = "../libferrumgui" }

[[bin]]
name = "heliox-assistant-panel"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
