[package]
name = "heliox-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
libm = "0.2.8" # For cosine similarity math in vector store
linked_list_allocator = "0.10.5"
spin = "0.9.8"
embedded-tls = { version = "=0.19.0", default-features = false, features = ["webpki"] }
embedded-io = { version = "=0.7.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
getrandom = { version = "0.2.17", default-features = false, features = ["custom"] }


[[bin]]
name = "heliox-daemon"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2

# TEMPORARY diagnostic: vendored copy of ring 0.17.14 with debug eprintln!s
# added to its build.rs, to see exactly what it computes for asm_target on
# CI vs a working local build - see vendor/ring-0.17.14/build.rs.
# [patch.crates-io]
# ring = { path = "vendor/ring-0.17.14" }
