[package]
name = "heliox-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
libm = "0.2.8" # For cosine similarity math in vector store
linked_list_allocator = "0.10.5"
spin = "0.9.8"
embedded-tls = { version = "=0.19.0", default-features = false, features = ["webpki"] }
embedded-io = { version = "=0.7.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
getrandom = { version = "0.2.17", default-features = false, features = ["custom"] }


[[bin]]
name = "heliox-daemon"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2

# Vendored, byte-identical copy of ring 0.17.14 (see vendor/ring-0.17.14/),
# patched in via a local path so its own build.rs is guaranteed a real
# filesystem path with no `.git` sibling. The plain registry-fetched crate
# (confirmed identical source, verified with a diff against this vendored
# copy) reproducibly failed to link only in CI - ring's build.rs branches
# its entire ASM-source strategy on `fs::metadata(c_root_dir.join(".git")).is_ok()`,
# and something about the registry extraction on that hosted runner (not
# reproducible locally) evidently makes that check come out differently
# there than for a local build or for this vendored path dependency, which
# silently skipped every ASM-optimized routine ring provides for x86_64.
[patch.crates-io]
ring = { path = "vendor/ring-0.17.14" }
