[package]
name = "ferrumos-init"
version = "0.0.1"
edition = "2021"
authors = ["FerrumOS Contributors"]
description = "First userspace process for FerrumOS (ring-3 ring-in)"
license = "MIT"

[[bin]]
name = "init"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
