[package]
name = "ferrumos-notes"
version = "0.0.1"
edition = "2021"
authors = ["FerrumOS Contributors"]
description = "Notes scratchpad app for FerrumOS - the demo package for ferrumpkg"
license = "MIT"

[dependencies]
linked_list_allocator = "0.10.5"
ferrumgui = { path = "../libferrumgui" }

[[bin]]
name = "notes"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
