[package]
name = "ferrumos-settings"
version = "0.0.1"
edition = "2021"
authors = ["FerrumOS Contributors"]
description = "System settings: view hardware tier and edit the Heliox agent's configuration"
license = "MIT"

[dependencies]
linked_list_allocator = "0.10.5"
ferrumgui = { path = "../libferrumgui" }

[[bin]]
name = "settings"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
